--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,10 +9,23 @@ galaxy_info:
   min_ansible_version: 2.4
 
   platforms:
-  - name: SUSE
+  - name: EL
+    versions:
+    - 7
+    - 8
+  - name: Debian
     versions:
     - all
-  - name: openSUSE Leap
+  - name: Fedora
+    versions:
+    - all
+  - name: opensuse
+    versions:
+    - all
+  - name: SLES
+    versions:
+    - all
+  - name: Ubuntu
     versions:
     - all
 
