tasks/main.yml: use FQCN

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
 # put_hostname_into_index_html/tasks/main.yml
 
 - name: "Put hostname into {{ path_to_index_html }}"
-  copy:
+  ansible.builtin.copy:
     dest: "{{ path_to_index_html }}"
     content: "{{ ansible_hostname }}\n"
     owner: 'root'
